--- a/senior/Placement/scorePlacement.html
+++ b/senior/Placement/scorePlacement.html
@@ -51,16 +51,16 @@
               </div>
               <div class="card-body">
                 <div class="row gx-2 mb-2">
-                  <label for="TB_Nscore1" class="col-auto col-form-label">区外高考总分︰</label>
+                  <label for="TB_Nscore1" class="col-auto col-form-label"><span class="form-required">*</span>区外高考总分︰</label>
                   <div class="col">
-                    <input name="ctl00$ContentPlaceHolder1$TB_Nscore1" type="text" id="TB_Nscore1" class="form-control form-control-sm rounded-0 d-inline w-auto" autocomplete="off">
+                    <input name="ctl00$ContentPlaceHolder1$TB_Nscore1" type="text" id="TB_Nscore1" class="form-control form-control-sm rounded-0 d-inline w-auto" autocomplete="off" placeholder="总分">
                     <div class="form-text"> <span id="RequiredFieldValidator1" class="text-danger" style="display: none;">请输入分数</span> <span id="RangeValidator1" class="text-danger" style="display: none;">请输入数字１～９９９</span> </div>
                   </div>
                 </div>
                 <div class="row gx-2 mb-2">
-                  <label for="TB_Nscore2" class="col-auto col-form-label">区外高考总分︰</label>
+                  <label for="TB_Nscore2" class="col-auto col-form-label"><span class="form-required">*</span>区外高考总分︰</label>
                   <div class="col">
-                    <input name="ctl00$ContentPlaceHolder1$TB_Nscore2" type="text" id="TB_Nscore2" class="form-control form-control-sm rounded-0 d-inline w-auto" autocomplete="off">
+                    <input name="ctl00$ContentPlaceHolder1$TB_Nscore2" type="text" id="TB_Nscore2" class="form-control form-control-sm rounded-0 d-inline w-auto" autocomplete="off" placeholder="总分">
                     <div class="form-text"> <span id="RequiredFieldValidator2" class="text-danger" style="display: none;">请输入分数</span> <span id="RangeValidator2" class="text-danger">请输入数字１～９９９</span> </div>
                   </div>
                 </div>
@@ -74,7 +74,7 @@
               </div>
               <div class="card-body">
                 <div class="row gx-2 mb-2">
-                  <label for="" class="col-auto col-form-label">首选科目︰</label>
+                  <label for="" class="col-auto col-form-label"><span class="form-required">*</span>首选科目︰</label>
                   <div class="col pt-1">
                     <div class="form-check form-check-inline">
                       <input class="form-check-input" type="radio" name="ctl00$ContentPlaceHolder1$RB_FCS" id="RB_FCS_0" value="1" checked>
@@ -146,12 +146,12 @@
               </div>
               <div class="card-body">
                 <div class="row gx-2 mb-2">
-                  <label for="" class="col-auto col-form-label text-end">录取批次︰</label>
+                  <label for="" class="col-auto col-form-label text-end"><span class="form-required">*</span>录取批次︰</label>
                   <div class="col pt-2">
                     <div class="row row-cols-2 row-cols-lg-3 row-cols-xl-4 g-3">
                       <div class="col">
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="radio" id="CB_AB_0" value="0" name="ctl00$ContentPlaceHolder1$CB_AB">
+                          <input class="form-check-input" type="radio" id="CB_AB_0" value="0" name="ctl00$ContentPlaceHolder1$CB_AB" checked>
                           <label class="form-check-label" for="CB_AB_0">本科提前批艺术类本科第二批</label>
                         </div>
                       </div>
@@ -283,10 +283,10 @@
                   </div>
                 </div>
                 <div class="row gx-2 mb-2 align-items-center">
-                  <label for="" class="col-auto col-form-label text-end" style="letter-spacing: .55em;">办学性质︰</label>
+                  <label for="" class="col-auto col-form-label text-end" style="letter-spacing: .55em;"><span class="form-required">*</span>办学性质︰</label>
                   <div class="col-auto col-lg">
                     <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="ctl00$ContentPlaceHolder1$RB_ST" id="RB_ST_0" value="1">
+                      <input class="form-check-input" type="radio" name="ctl00$ContentPlaceHolder1$RB_ST" id="RB_ST_0" value="1" checked>
                       <label class="form-check-label" for="RB_ST_0">不限</label>
                     </div>
                     <div class="form-check form-check-inline">
