--- a/senior/Placement/scorePlacement.html
+++ b/senior/Placement/scorePlacement.html
@@ -277,7 +277,7 @@
                       <label class="btn" for="CBL_area_30">新疆</label>
                       <input type="checkbox" class="btn-check" id="CBL_area_31" autocomplete="off">
                       <label class="btn" for="CBL_area_31">香港特别行政区</label>
-                      <button type="button" class="btn" id="checkAll">全選</button>
+                      <button type="button" class="btn" id="checkAll">全选</button>
                       <button type="button" class="btn" id="clearAll">取消</button>
                     </div>
                   </div>
@@ -327,20 +327,23 @@
           <div class="result-info-item">考生姓名
             <label class="result-info-label">郑小文</label>
           </div>
+          <div class="result-info-item">首选科目
+            <label class="result-info-label">历史</label>
+          </div>
           <div class="result-info-item">录取批次
             <label class="result-info-label">本科普通批</label>
           </div>
           <div class="result-info-item"> 区外高考总分
             <label class="result-info-label">700</label>
           </div>
-          <div class="result-info-item"> 区內高考总分
+          <div class="result-info-item"> 区内高考总分
             <label class="result-info-label">700</label>
           </div>
           <div class="result-info-item"> 分析日期
             <label class="result-info-label">2025/05/20 </label>
           </div>
-          <a href="" class="icon-link icon-link-hover ms-auto"><i class="bi bi-chevron-double-left"></i>返回成績落點查詢</a></div>
-        <h3 class="result-title">2024年落点分析結果</h3>
+          <a href="" class="icon-link icon-link-hover ms-auto"><i class="bi bi-chevron-double-left"></i>返回成绩落点查询</a></div>
+        <h3 class="result-title">2024年落点分析结果</h3>
         <div class="result-content">
           <nav>
             <div class="nav nav-tabs nav-fill result-tab" id="resultTab" role="tablist">
@@ -357,8 +360,8 @@
                     <tr>
                       <th scope="col" class="td-order">落点序</th>
                       <th scope="col" class="td-school-major">院校与专业</th>
-                      <th scope="col" class="td-region-type">地区/办学</th>
-                      <th scope="col" class="td-scale">招生規模</th>
+                      <th scope="col" class="td-region-type">地区/办学<small>科类名称</small></th>
+                      <th scope="col" class="td-scale">招生规模</th>
                       <th scope="col" class="td-score-group">录取数据<small>（最低分/平均分/最高分）</small></th>
                       <th scope="col" class="td-rank-min">最低分排位</th>
                       <th scope="col" class="td-gap">主要差距指标</th>
@@ -410,7 +413,7 @@
                     <tr>
                       <th scope="col" class="td-order">落点序</th>
                       <th scope="col" class="td-school-major">院校与专业</th>
-                      <th scope="col" class="td-region-type">地区/办学</th>
+                      <th scope="col" class="td-region-type">地区/办学<small>科类名称</small></th>
                       <th scope="col" class="td-scale">招生规模</th>
                       <th scope="col" class="td-score-group">录取数据<small>（最低分/平均分/最高分）</small></th>
                       <th scope="col" class="td-rank-min">最低分排位</th>
@@ -463,8 +466,8 @@
                     <tr>
                       <th scope="col" class="td-order">落点序</th>
                       <th scope="col" class="td-school-major">院校与专业</th>
-                      <th scope="col" class="td-region-type">地区/办学</th>
-                      <th scope="col" class="td-scale">招生規模</th>
+                      <th scope="col" class="td-region-type">地区/办学<small>科类名称</small></th>
+                      <th scope="col" class="td-scale">招生规模</th>
                       <th scope="col" class="td-score-group">录取数据<small>（最低分/平均分/最高分）</small></th>
                       <th scope="col" class="td-rank-min">最低分排位</th>
                       <th scope="col" class="td-gap">主要差距指标</th>
@@ -533,8 +536,9 @@
   </main>
   <footer></footer>
   <!-- Back to Top --> 
-  <a href="#" class="btn btn-outline-primary rounded-circle back-to-top" style="display: none;"><i class="bi bi-arrow-up"></i></a>	
+  <a href="#" class="btn btn-outline-primary rounded-circle back-to-top" style="display: none;"><i class="bi bi-arrow-up"></i></a>
 </form>
+
 <!-- ------- ------- ------- ------- ------- ------- ------- --> 
 <!-- ------- ------- ------- ------- ------- ------- ------- --> 
 <!-- ------- ------- ------- ------- ------- ------- ------- --> 
